--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ details summary {
     background:#0b0b0b;
     background-image: url(../images/bg-vr.png);
     padding: 4em 0;
-    background-size: cover;
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
     
