--- a/css/styles.css
+++ b/css/styles.css
@@ -51,8 +51,6 @@ details summary {
   }
   
 
-
-
 #hero{
     background-image: url(../images/bg-spectral.png);
     background-size:cover;
@@ -233,6 +231,55 @@ details summary {
     padding-top: 4em;
     margin-bottom: -.2em;
 }
+
+
+.modal {
+    display: none; /* oculta el modal por defecto */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    
+  }
+
+  .modal-backdrop{
+    z-index: 0;
+    background-color: rgba(255, 255, 255, 0.01);
+    backdrop-filter: blur(10px);
+
+  }
+  
+  .modal-contenido {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .cerrar {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .cerrar:hover,
+  .cerrar:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-backdrop.show {
+    opacity: 1;
+    background-color: rgb(0 0 0 / 60%);
+    backdrop-filter: blur(4px);
+}
+
 
 @media (max-width: 700px) {
     #hero nav{
