--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ details summary {
 }
 .faq-list {
     background-color: rgba(255, 255, 255, 0.04);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     padding: 2em;
@@ -254,6 +255,7 @@ details summary {
   .modal-backdrop{
     z-index: 0;
     background-color: rgba(255, 255, 255, 0.01);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
 
   }
