--- a/css/styles.css
+++ b/css/styles.css
@@ -221,10 +221,10 @@ input {
 
 .faq-list {
   background-color: rgba(255, 255, 255, 0.04);
-  border-radius: 10px;
+  border-radius: 4px;
   padding: 2em;
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 .form-group {
@@ -242,11 +242,14 @@ input {
   height: 100%;
   overflow: auto;
 }
+.modal-backdrop.show {
+  opacity: 0.9;
+  background-color: rgba(0, 0, 0, 0.01);
+  -webkit-backdrop-filter: blur(40px) !important;
+  backdrop-filter: blur(20px) !important;
+}
 .modal-backdrop {
   z-index: 0;
-  background-color: rgba(255, 255, 255, 0.01);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
 }
 .modal-content {
   background-color: #0f0f0f;
