--- a/css/styles.scss
+++ b/css/styles.scss
@@ -237,10 +237,10 @@ input {
 
 .faq-list {
   background-color: rgba(255, 255, 255, 0.04);
-  border-radius: 10px;
+  border-radius: 4px;
   padding: 2em;
-  -webkit-backdrop-filter: blur(20px);
-  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 
 .form-group {
@@ -257,19 +257,19 @@ input {
     width: 100%;
     height: 100%;
     overflow: auto;
-
+    &-backdrop.show {
+      opacity:  0.9;
+      background-color: rgba(0, 0, 0, 0.01);
+      -webkit-backdrop-filter: blur(40px) !important;
+      backdrop-filter: blur(20px) !important;
+    }
     &-backdrop {
       z-index: 0;
-      background-color: rgba(255, 255, 255, 0.01);
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
     }
-
     &-content {
       background-color: #0f0f0f;
       border: 1px solid #C8C9CC;
-      box-shadow: -5px -5px 15px 5px rgba(255, 255, 144, 0.1),
-                  5px 5px 15px 7px rgba(224, 251, 169, 0.1);
+      box-shadow: -5px -5px 15px 5px rgba(255, 255, 144, 0.1),5px 5px 15px 7px rgba(224, 251, 169, 0.1);
     }
   }
 
